# auto-code

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-build.sh  docker-compose.yml  pyproject.toml  skills-lock.json
atom/: cli.py  input.py  orchestrator.py  pane.py  status.py  tui.py
atom/commands/: registry.py
atom/config/: schema.py  settings.py
atom/core/: agent.py  models.py
atom/session/: manager.py
atom_agent.egg-info/: SOURCES.txt
built-in/skills/remember/: SKILL.md
sds_ax/: __init__.py  __main__.py  cli.py
sds_ax/commands/: registry.py
sds_ax/config/: schema.py  settings.py
sds_ax/core/: agent.py  models.py
sds_ax/layers/: context_compaction.py  stall_detector.py
sds_ax/tools/: __init__.py  bash.py  fetch_url.py  git.py  web_search.py
tests/: interactive_pty_test.py  interactive_test.py
totoro/: cli.py  diff.py  input.py  markdown.py  orchestrator.py  pane.py  skills.py  status.py  tui.py  utils.py
totoro/commands/: registry.py
totoro/config/: schema.py  settings.py  setup.py
totoro/core/: agent.py  models.py
totoro/layers/: _token_utils.py  auto_dream.py  context_compaction.py  sanitize.py  stall_detector.py  subagent_hitl.py
totoro/session/: manager.py  restore.py
totoro/tools/: git.py
